--- a/static/charts-chartjs.html
+++ b/static/charts-chartjs.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/charts-chartjs.html" />
+	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/laporan.html" />
 
 	<title>Laporan | Admin</title>
 
