--- a/static/inputdata.html
+++ b/static/inputdata.html
@@ -72,7 +72,7 @@
                     <li class="sidebar-header">Report</li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="charts-chartjs.html">
+                        <a class="sidebar-link" href="laporan.html">
                             <i class="align-middle" data-feather="bar-chart-2"></i>
                             <span class="align-middle">Laporan</span>
                         </a>
