--- a/static/laporan.html
+++ b/static/laporan.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-  <link rel="canonical" href="https://demo-basic.Blp Gresik.io/charts-chartjs.html" />
+  <link rel="canonical" href="https://demo-basic.Blp Gresik.io/laporan.html" />
 
   <title>Laporan | Admin</title>
 
@@ -28,91 +28,58 @@
     <nav id="sidebar" class="sidebar js-sidebar">
       <div class="sidebar-content js-simplebar">
         <a class="sidebar-brand" href="index.html">
-          <span class="align-middle">Admin</span>
+          <span class="align-middle">BLP GRESIK</span>
         </a>
 
         <ul class="sidebar-nav">
-          <li class="sidebar-header">
-            Pages
-          </li>
+          <li class="sidebar-header">Pages</li>
 
           <li class="sidebar-item active">
             <a class="sidebar-link" href="index.html">
-              <i class="align-middle" data-feather="sliders"></i> <span class="align-middle">Dashboard</span>
+              <i class="align-middle" data-feather="sliders"></i>
+              <span class="align-middle">Dashboard</span>
+            </a>
+          </li>
+
+          <li class="sidebar-header">Data list</li>
+
+          <li class="sidebar-item">
+            <a class="sidebar-link" href="datamaster.html">
+              <i class="align-middle" data-feather="square"></i>
+              <span class="align-middle">Data Master</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a class="sidebar-link" href="monitoring.html">
+              <i class="align-middle" data-feather="check-square"></i>
+              <span class="align-middle">Monitoring</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a class="sidebar-link" href="penyedia.html">
+              <i class="align-middle" data-feather="align-left"></i>
+              <span class="align-middle">Penyedia</span>
             </a>
           </li>
           <!--
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-profile.html">
-							<i class="align-middle" data-feather="user"></i> <span class="align-middle">Profile</span>
-						</a>
-					</li>
-					
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-sign-in.html">
-							<i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-						</a>
-					</li>
-
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-sign-up.html">
-							<i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Sign
-								Up</span>
-						</a>
-					</li>
-
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-blank.html">
-							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
-						</a>
-					</li>
-					-->
-          <li class="sidebar-header">
-            Data list
-          </li>
-
           <li class="sidebar-item">
-            <a class="sidebar-link" href="ui-buttons.html">
-              <i class="align-middle" data-feather="square"></i> <span class="align-middle">Data Master</span>
+            <a class="sidebar-link" href="jasa-konsultasi.html">
+              <i class="align-middle" data-feather="coffee"></i>
+              <span class="align-middle">Jasa Konsultasi</span>
             </a>
           </li>
+        -->
+          <li class="sidebar-header">Report</li>
 
           <li class="sidebar-item">
-            <a class="sidebar-link" href="pengadaan-barang.html">
-              <i class="align-middle" data-feather="check-square"></i> <span class="align-middle">Pengadaan
-                barang</span>
+            <a class="sidebar-link" href="laporan.html">
+              <i class="align-middle" data-feather="bar-chart-2"></i>
+              <span class="align-middle">Laporan</span>
             </a>
           </li>
           <!--
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="ui-cards.html">
-							<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Cards</span>
-						</a>
-					</li>
-					-->
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="pengadaan-konstruksi.html">
-              <i class="align-middle" data-feather="align-left"></i> <span class="align-middle">Pengadaan
-                Konstruksi</span>
-            </a>
-          </li>
-
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="icons-feather.html">
-              <i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Jasa Konsultasi</span>
-            </a>
-          </li>
-
-          <li class="sidebar-header">
-            Plugins & Addons
-          </li>
-
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="charts-chartjs.html">
-              <i class="align-middle" data-feather="bar-chart-2"></i> <span class="align-middle">Laporan</span>
-            </a>
-          </li>
-          <!---
 					<li class="sidebar-item">
 						<a class="sidebar-link" href="maps-google.html">
 							<i class="align-middle" data-feather="map"></i> <span class="align-middle">Maps</span>
@@ -124,9 +91,7 @@
         <div class="sidebar-cta">
           <div class="sidebar-cta-content">
             <strong class="d-inline-block mb-2">Kontak</strong>
-            <div class="mb-3 text-sm">
-              Dapatkan informasi lebih lanjut
-            </div>
+            <div class="mb-3 text-sm">Dapatkan informasi lebih lanjut</div>
             <div class="d-grid">
               <a href="upgrade-to-pro.html" class="btn btn-primary">Kontak kami</a>
             </div>
