--- a/static/masterpenyedia.html
+++ b/static/masterpenyedia.html
@@ -81,7 +81,7 @@ https://cdn.jsdelivr.net/npm/jwt-decode@3.1.2/build/jwt-decode.min.js
                     <li class="sidebar-header">Report</li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="charts-chartjs.html">
+                        <a class="sidebar-link" href="laporan.html">
                             <i class="align-middle" data-feather="bar-chart-2"></i>
                             <span class="align-middle">Laporan</span>
                         </a>
