--- a/static/datamaster.html
+++ b/static/datamaster.html
@@ -94,7 +94,7 @@
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="charts-chartjs.html">
+						<a class="sidebar-link" href="laporan.html">
 							<i class="align-middle" data-feather="bar-chart-2"></i> <span
 								class="align-middle">Laporan</span>
 						</a>
