--- a/static/pengecualian.html
+++ b/static/pengecualian.html
@@ -69,7 +69,7 @@
                     <li class="sidebar-header">Plugins & Addons</li>
 
                     <li class="sidebar-item">
-                        <a class="sidebar-link" href="charts-chartjs.html">
+                        <a class="sidebar-link" href="laporan.html">
                             <i class="align-middle" data-feather="bar-chart-2"></i>
                             <span class="align-middle">Charts</span>
                         </a>
