--- a/static/upgrade-to-pro.html
+++ b/static/upgrade-to-pro.html
@@ -106,7 +106,7 @@
 			</li>
 
 			<li class="sidebar-item">
-				<a class="sidebar-link" href="charts-chartjs.html">
+				<a class="sidebar-link" href="laporan.html">
 					<i class="align-middle" data-feather="bar-chart-2"></i> <span
 						class="align-middle">Laporan</span>
 				</a>
