--- a/static/charts-chartjs.html
+++ b/static/charts-chartjs.html
@@ -127,7 +127,7 @@
 							Dapatkan informasi lebih lanjut
 						</div>
 						<div class="d-grid">
-							<a href="upgrade-to-pro.html" class="btn btn-primary">Kontak kami</a>
+							<a href="#" class="btn btn-primary">Kontak kami</a>
 						</div>
 					</div>
 				</div>
@@ -302,7 +302,7 @@
 
 					<div class="mb-3">
 						<h1 class="h3 d-inline align-middle">Chart.js</h1>
-						<a class="badge bg-dark text-white ms-2" href="upgrade-to-pro.html">
+						<a class="badge bg-dark text-white ms-2" href="#">
       Get more chart examples
   </a>
 					</div>
