--- a/static/laporan.html
+++ b/static/laporan.html
@@ -93,7 +93,7 @@
             <strong class="d-inline-block mb-2">Kontak</strong>
             <div class="mb-3 text-sm">Dapatkan informasi lebih lanjut</div>
             <div class="d-grid">
-              <a href="upgrade-to-pro.html" class="btn btn-primary">Kontak kami</a>
+              <a href="#" class="btn btn-primary">Kontak kami</a>
             </div>
           </div>
         </div>
