--- a/static/maps-google.html
+++ b/static/maps-google.html
@@ -121,7 +121,7 @@
 							Are you looking for more components? Check out our premium version.
 						</div>
 						<div class="d-grid">
-							<a href="upgrade-to-pro.html" class="btn btn-primary">Upgrade to Pro</a>
+							<a href="#" class="btn btn-primary">Upgrade to Pro</a>
 						</div>
 					</div>
 				</div>
@@ -295,7 +295,7 @@
 
 					<div class="mb-3">
 						<h1 class="h3 d-inline align-middle">Google Maps</h1>
-						<a class="badge bg-dark text-white ms-2" href="upgrade-to-pro.html">
+						<a class="badge bg-dark text-white ms-2" href="#">
       Get more Google Maps examples
   </a>
 					</div>
