--- a/static/upgrade-to-pro.html
+++ b/static/upgrade-to-pro.html
@@ -12,7 +12,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/upgrade-to-pro.html" />
+	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/#" />
 
 	<title>Kontak | Admin</title>
 
@@ -127,7 +127,7 @@
 					Dapatkan informasi lebih lanjut
 				</div>
 				<div class="d-grid">
-					<a href="upgrade-to-pro.html" class="btn btn-primary">Kontak kami</a>
+					<a href="#" class="btn btn-primary">Kontak kami</a>
 				</div>
 			</div>
 		</div>
