--- a/static/datamaster.html
+++ b/static/datamaster.html
@@ -115,7 +115,7 @@
 							Dapatkan informasi lebih lanjut
 						</div>
 						<div class="d-grid">
-							<a href="upgrade-to-pro.html" class="btn btn-primary">Kontak kami</a>
+							<a href="#" class="btn btn-primary">Kontak kami</a>
 						</div>
 					</div>
 				</div>
@@ -326,7 +326,7 @@
 
 					<div class="mb-3">
 						<h1 class="h3 d-inline align-middle">Master Data</h1>
-						<a class="badge bg-dark text-white ms-2" href="upgrade-to-pro.html">
+						<a class="badge bg-dark text-white ms-2" href="#">
 							Master Data
 						</a>
 					</div>
