--- a/static/index.html
+++ b/static/index.html
@@ -428,12 +428,12 @@
       // clear_data()
       var data_api = ''
       if (datasatuan == 'SELURUH SATUAN KERJA') {
-        data_api = "http://lpse-gresik.cloud/api/datapakets/getdatametode?tahun=" + tahun
+        data_api = "https://lpse-gresik.cloud/api/datapakets/getdatametode?tahun=" + tahun
       }
       else {
-        data_api = "http://lpse-gresik.cloud/api/datapakets/getdatametode?tahun=" + tahun + "&sk=" + datasatuan
+        data_api = "https://lpse-gresik.cloud/api/datapakets/getdatametode?tahun=" + tahun + "&sk=" + datasatuan
       }
-      //fetch("http://lpse-gresik.cloud/api/datapakets/getstatic?tahun=" + tahun).then(res => res.json())
+      //fetch("https://lpse-gresik.cloud/api/datapakets/getstatic?tahun=" + tahun).then(res => res.json())
       fetch(data_api).then(res => res.json())
         .then(res => {
           str_body = ""
@@ -517,10 +517,10 @@
 
       var api_ = ""
       if (satuan == "SELURUH SATUAN KERJA") {
-         api_ = "http://lpse-gresik.cloud/api/datapakets/getdatametode?tahun="+tahun
+         api_ = "https://lpse-gresik.cloud/api/datapakets/getdatametode?tahun="+tahun
        }
       else {
-         api_ = "http://lpse-gresik.cloud/api/datapakets/getdatametode?tahun="+tahun+'&sk='+satuan
+         api_ = "https://lpse-gresik.cloud/api/datapakets/getdatametode?tahun="+tahun+'&sk='+satuan
       }
 
       //const apiUrl = "http://lpse-gresik.cloud/api/datapakets/getdatametode?tahun=" + tahun
