--- a/static/input-monitoring.html
+++ b/static/input-monitoring.html
@@ -597,7 +597,7 @@
             var jenis_pengadaan = $("#jenis_pengadaan option:selected").text();
             var tahapan = $("#tahapan option:selected").text();
 
-            fetch("http://localhost:8000/api/datapakets/simpanmonitor", {
+            fetch("https://lpse-gresik.cloud/api/datapakets/simpanmonitor", {
 
                 // Adding method type
                 method: "POST",
