--- a/static/pages-profile.html
+++ b/static/pages-profile.html
@@ -399,7 +399,7 @@
 			console.log(token)
 			console.log(user.id);
 
-			fetch("http://localhost:8000/api/auth/user-profile/" + user.id, {
+			fetch("https://lpse-gresik.cloud/api/auth/user-profile/" + user.id, {
 
 				// Adding method type
 				method: "POST",
