--- a/static/sigin.html
+++ b/static/sigin.html
@@ -94,7 +94,7 @@
 			const password = document.getElementById("password").value;
 
 			const xhttp = new XMLHttpRequest();
-			xhttp.open("POST", "http://localhost:8000/api/auth/login");
+			xhttp.open("POST", "https://lpse-gresik.cloud/api/auth/login");
 			xhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
 			xhttp.send(JSON.stringify({
 				"email": email,
