--- a/static/tambah-penyedia.html
+++ b/static/tambah-penyedia.html
@@ -203,7 +203,7 @@
             // main.js
 
             // POST request using fetch()
-            fetch("http://localhost:8000/api/datapakets/penyedia", {
+            fetch("https://lpse-gresik.cloud/api/datapakets/penyedia", {
 
                 // Adding method type
                 method: "POST",
