--- a/static/detail-master-penyedia.html
+++ b/static/detail-master-penyedia.html
@@ -494,16 +494,16 @@
         function getData() {
 
             const datax = JSON.parse(localStorage.getItem('penyedia'));
-            const api = 'http://localhost:8000/api/datapakets/detailpemenang?idpemenang='
+            const api = 'https://lpse-gresik.cloud/api/datapakets/detailpemenang?idpemenang='
             //getData(datax.kode_rup)
-            //http://localhost:8000/api/datapakets/getwinpro?id=4
+            //https://lpse-gresik.cloud/api/datapakets/getwinpro?id=4
             var table = $("#datatable").DataTable({
                 prerender: true,
                 destroy: true,
                 ajax:
 
                 {
-                    "url": "http://localhost:8000/api/datapakets/getwinpro?id=" + datax.id,
+                    "url": "https://lpse-gresik.cloud/api/datapakets/getwinpro?id=" + datax.id,
                     "type": "GET",
                     "dataType": "JSON"
                 },
@@ -533,7 +533,7 @@
             });
         }
         function deleteData(kode_rup) {
-            const api_ = 'http://localhost:8000/api/datapakets/postdatas?kode_rup='
+            const api_ = 'https://lpse-gresik.cloud/api/datapakets/postdatas?kode_rup='
             Swal.fire({
                 title: 'Are you sure?',
                 text: "You won't be able to revert this!",
@@ -544,7 +544,7 @@
                 confirmButtonText: 'Yes, delete it!'
             }).then((result) => {
                 if (result.isConfirmed) {
-                   // const api_ = 'http://localhost:8000/api/datapakets/penyedia?id='
+                   // const api_ = 'https://lpse-gresik.cloud/api/datapakets/penyedia?id='
                     fetch(api_ + kode_rup, {
                         method: 'DELETE'
                     }).then(response => {
@@ -564,7 +564,7 @@
                 }
             })
 
-           // const api_ = 'http://localhost:8000/api/datapakets/postdatas?kode_rup='
+           // const api_ = 'https://lpse-gresik.cloud/api/datapakets/postdatas?kode_rup='
           /*  fetch(api_ + kode_rup, {
                 method: 'DELETE'
             }).then(response => {
