--- a/static/detail-project.html
+++ b/static/detail-project.html
@@ -221,8 +221,8 @@
 		}
 		function getData(koderup) {
 			//console.log('data x', koderup)
-			//const api_ = 'http://localhost:8000/api/datapakets/getdetaildata?koderup='
-			const data_api = 'http://localhost:8000/api/datapakets/getdetaildata?koderup='+koderup;
+			//const api_ = 'https://lpse-gresik.cloud/api/datapakets/getdetaildata?koderup='
+			const data_api = 'https://lpse-gresik.cloud/api/datapakets/getdetaildata?koderup='+koderup;
 			fetch(data_api).then(res => res.json())
 				.then(res => {
 					str_body = ""
