--- a/static/input-kontrak.html
+++ b/static/input-kontrak.html
@@ -528,7 +528,7 @@
 
             /* $.ajax({
                  type: "POST",
-                 url: "http://localhost:8000/api/datapakets/datakontrak",
+                 url: "https://lpse-gresik.cloud/api/datapakets/datakontrak",
                  dataType: "json",  // <<<<<<<<<<<<<<<
                  data: {
                      message: message,
@@ -543,7 +543,7 @@
              });
              */
 
-            fetch("http://localhost:8000/api/datapakets/datakontrak", {
+            fetch("https://lpse-gresik.cloud/api/datapakets/datakontrak", {
 
                 // Adding method type
                 method: "POST",
