--- a/static/monitoring.html
+++ b/static/monitoring.html
@@ -276,10 +276,10 @@
         function getData(text, dinas) {
             var api_ = ""
             if (dinas == "SELURUH SATUAN KERJA") {
-                api_ = "http://localhost:8000/api/datapakets/getdatamonitor?tahun="+text
+                api_ = "https://lpse-gresik.cloud/api/datapakets/getdatamonitor?tahun="+text
             }
             else {
-                api_ = "http://localhost:8000/api/datapakets/getdatamonitor?tahun="+text+'&satuan='+dinas
+                api_ = "https://lpse-gresik.cloud/api/datapakets/getdatamonitor?tahun="+text+'&satuan='+dinas
             }
 
             var table = $("#datatable").DataTable({
