--- a/static/pengadaanlangsung.html
+++ b/static/pengadaanlangsung.html
@@ -276,10 +276,10 @@
         function getData(text, dinas) {
             var api_ = ""
             if (dinas == "SELURUH SATUAN KERJA") {
-                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'
+                api_ = "https://lpse-gresik.cloud/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'
             }
             else {
-                api_ = "http://localhost:8000/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'+'&satuan='+dinas
+                api_ = "https://lpse-gresik.cloud/api/datapakets/getdata?tahun="+text+'&metode=Pengadaan Langsung'+'&satuan='+dinas
             }
 
             var table = $("#datatable").DataTable({
