--- a/static/index.html
+++ b/static/index.html
@@ -6,16 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5" />
-  <meta name="author" content="Blp Gresik" />
+  <meta name="author" content="LENSA" />
   <meta name="keywords"
-    content="Blp Gresik, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web" />
+    content="LENSA, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web" />
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
   <link rel="canonical" href="#" />
 
-  <title>Blp Gresik</title>
+  <title>LENSA</title>
   <!--
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -34,7 +34,7 @@
     <nav id="sidebar" class="sidebar js-sidebar">
       <div class="sidebar-content js-simplebar">
         <a class="sidebar-brand" href="index.html">
-          <span class="align-middle">BLP GRESIK</span>
+          <span class="align-middle">LENSA</span>
         </a>
 
         <ul class="sidebar-nav">
