--- a/static/charts-chartjs.html
+++ b/static/charts-chartjs.html
@@ -6,13 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5">
-	<meta name="author" content="Blp Gresik">
-	<meta name="keywords" content="Blp Gresik, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
+	<meta name="author" content="LENSA">
+	<meta name="keywords" content="LENSA, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/laporan.html" />
+	<link rel="canonical" href="https://demo-basic.LENSA.io/laporan.html" />
 
 	<title>Laporan | Admin</title>
 
@@ -372,21 +372,21 @@
 					<div class="row text-muted">
 						<div class="col-6 text-start">
 							<p class="mb-0">
-								<a class="text-muted" href="https://Blp Gresik.io/" target="_blank"><strong>Admin</strong></a> - <a class="text-muted" href="https://Blp Gresik.io/" target="_blank"><strong>
+								<a class="text-muted" href="https://LENSA.io/" target="_blank"><strong>Admin</strong></a> - <a class="text-muted" href="https://LENSA.io/" target="_blank"><strong>
 						</div>
 						<div class="col-6 text-end">
 							<ul class="list-inline">
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Support</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Support</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Help Center</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Help Center</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Privacy</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Privacy</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Terms</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Terms</a>
 								</li>
 							</ul>
 						</div>
