--- a/static/detail-project.html
+++ b/static/detail-project.html
@@ -6,14 +6,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="description" content="Responsive Admin &amp; Dashboard Template based on Bootstrap 5">
-	<meta name="author" content="Blp Gresik">
+	<meta name="author" content="LENSA">
 	<meta name="keywords"
-		content="Blp Gresik, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
+		content="LENSA, bootstrap, bootstrap 5, admin, dashboard, template, responsive, css, sass, html, theme, front-end, ui kit, web">
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="shortcut icon" href="img/icons/icon-48x48.png" />
 
-	<link rel="canonical" href="https://demo-basic.Blp Gresik.io/icons-feather.html" />
+	<link rel="canonical" href="https://demo-basic.LENSA.io/icons-feather.html" />
 
 	<title>Jasa Konsultasi | Admin</title>
 
@@ -28,7 +28,7 @@
 		<nav id="sidebar" class="sidebar js-sidebar">
 			<div class="sidebar-content js-simplebar">
 			  <a class="sidebar-brand" href="index.html">
-				<span class="align-middle">BLP GRESIK</span>
+				<span class="align-middle">LENSA</span>
 			  </a>
 	  
 			  <ul class="sidebar-nav">
@@ -140,24 +140,24 @@
 					<div class="row text-muted">
 						<div class="col-6 text-start">
 							<p class="mb-0">
-								<a class="text-muted" href="https://Blp Gresik.io/"
+								<a class="text-muted" href="https://LENSA.io/"
 									target="_blank"><strong>Admin</strong></a> - <a class="text-muted"
-									href="https://Blp Gresik.io/" target="_blank"><strong> Admin </strong></a> &copy;
+									href="https://LENSA.io/" target="_blank"><strong> Admin </strong></a> &copy;
 							</p>
 						</div>
 						<div class="col-6 text-end">
 							<ul class="list-inline">
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Support</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Support</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Help Center</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Help Center</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Privacy</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Privacy</a>
 								</li>
 								<li class="list-inline-item">
-									<a class="text-muted" href="https://Blp Gresik.io/" target="_blank">Terms</a>
+									<a class="text-muted" href="https://LENSA.io/" target="_blank">Terms</a>
 								</li>
 							</ul>
 						</div>
