--- a/static/index.html
+++ b/static/index.html
@@ -486,13 +486,13 @@
           labels: metode_name,
           datasets: [{
             label: 'Total Hps',
-            backgroundColor: 'blue',
+            backgroundColor: 'teal',
             borderColor: 'rgb(255, 99, 132)',
             data: metode_pengadaan_total
           },
           {
             label: 'Jumlah',
-            backgroundColor: 'pink',
+            backgroundColor: 'orange',
             borderColor: 'rgb(255, 99, 132)',
             data: metode_jumlah
           }
